--- a/src/assets/fonts/allfonts.css
+++ b/src/assets/fonts/allfonts.css
@@ -1,8 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Carme&display=swap');
 
 .work-sans {
   font-family: "Work Sans", serif;
   font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+.carme-regular {
+  font-family: "Carme", serif;
   font-weight: 400;
   font-style: normal;
 }
