--- a/src/assets/fonts/allfonts.css
+++ b/src/assets/fonts/allfonts.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Carme&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 .work-sans {
   font-family: "Work Sans", serif;
@@ -11,6 +12,14 @@
 
 .carme-regular {
   font-family: "Carme", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+.montserrat {
+  font-family: "Montserrat", serif;
+  font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
 }
