--- a/src/assets/fonts/anton.css
+++ b/src/assets/fonts/anton.css
@@ -5,3 +5,8 @@
     font-weight: 400;
     font-style: normal;
   }
+  .anton {
+    font-family: "Anton", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
