--- a/src/assets/fonts/liter.css
+++ b/src/assets/fonts/liter.css
@@ -5,3 +5,9 @@
     font-weight: 400;
     font-style: normal;
   }  
+
+  .liter {
+    font-family: "Liter", serif;
+    font-weight: 400;
+    font-style: normal;
+  }  
