--- a/src/assets/fonts/righteous.css
+++ b/src/assets/fonts/righteous.css
@@ -4,3 +4,9 @@
   font-weight: 400;
   font-style: normal;
 }
+
+.righteous {
+  font-family: "Righteous", serif;
+  font-weight: 400;
+  font-style: normal;
+}
