--- a/src/assets/fonts/allfonts.css
+++ b/src/assets/fonts/allfonts.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Carme&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Carme&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 .work-sans {
   font-family: "Work Sans", serif;
   font-optical-sizing: auto;
@@ -9,13 +8,11 @@
   font-style: normal;
 }
 
-
 .carme-regular {
   font-family: "Carme", serif;
   font-weight: 400;
   font-style: normal;
 }
-
 
 .montserrat {
   font-family: "Montserrat", serif;
@@ -23,3 +20,4 @@
   font-weight: 400;
   font-style: normal;
 }
+
